rabbitmq/resources/app-factorial-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-factorial-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: app-factorial-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-factorial-api
    spec:
      containers:
        - name: app-factorial-api
          image: k3d-example-registry:5000/app-factorial-api
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
