rabbitmq/resources/app-factorial-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-factorial-api
spec:
  selector:
    app.kubernetes.io/name: app-factorial-api
  ports:
    - name: http
      port: 80
      targetPort: http
